fix drawer backdrop add mobile check to prevent drawer navigation flicker

--- a/src/core/core.css
+++ b/src/core/core.css
@@ -32,3 +32,7 @@ body.prevent-over-scroll {
   overflow: hidden;
   background-color: rgba(0,0,0,0.12);
 }
+
+.mdw-backdrop.mdw-drawer-backdrop {
+  z-index: 1;
+}
